Revert Use Java 9 collection factories