@@ -17,6 +17,7 @@ import org.schabi.newpipe.extractor.ServiceList;
 import org.schabi.newpipe.extractor.services.peertube.PeertubeInstance;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public final class PeertubeHelper {
@@ -28,7 +29,7 @@ public final class PeertubeHelper {
         final String savedInstanceListKey = context.getString(R.string.peertube_instance_list_key);
         final String savedJson = sharedPreferences.getString(savedInstanceListKey, null);
         if (null == savedJson) {
-            return List.of(getCurrentInstance());
+            return Collections.singletonList(getCurrentInstance());
         }
 
         try {
@@ -44,7 +45,7 @@ public final class PeertubeHelper {
             }
             return result;
         } catch (final JsonParserException e) {
-            return List.of(getCurrentInstance());
+            return Collections.singletonList(getCurrentInstance());
         }
     }
 
